--- a/Connected_Health_App/app/src/main/res/layout/activity_single_item_delete.xml
+++ b/Connected_Health_App/app/src/main/res/layout/activity_single_item_delete.xml
@@ -29,30 +29,30 @@
             android:layout_centerHorizontal="true">
 
             <RelativeLayout
+                style="@style/SingleItemContent"
                 android:weightSum="3"
                 android:orientation="horizontal"
                 android:layout_weight="0.85"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:background="@android:color/background_light"
                 android:id="@+id/main_layout">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Are you sure you want to delete this?"
-                    android:id="@+id/headingText"
+                    android:textSize="50dp"
+                    android:id="@+id/heading_text"
                     android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true" />
-
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true" />
                 <TextView
+                    android:layout_below="@id/heading_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/content"
-                    android:layout_below="@+id/headingText"
-                    android:layout_centerHorizontal="true" />
+                    android:textColor="#000000"
+                    android:textSize="40dp"
+                    android:id="@+id/content_text" />
             </RelativeLayout>
 
             <LinearLayout
@@ -69,10 +69,11 @@
                     android:id="@+id/nav_layout0">
 
                     <Button
+                        style="@style/NavButton"
                         android:onClick="goToConfirmDelete"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Yes"
+                        android:text="Yes, delete this"
                         android:id="@+id/button_save"
                         android:layout_centerVertical="true"
                         android:layout_centerHorizontal="true"
@@ -94,6 +95,7 @@
                     android:id="@+id/nav_layout3">
 
                     <Button
+                        style="@style/NavButton"
                         android:onClick="goToCancelDelete"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
